# amethyst

./: .editorconfig  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING-WITH-AI.md  CONTRIBUTING.md  PERFORMANCE_OPTIMIZATIONS_PR.md  PLANS.md  PRIVACY.md  PULL_NOTIFICATION.md  README.md  RELEASE_OPS.md  SECURITY.md  SKILL.md  SUBMISSION_GUIDE.md  build.gradle  build.gradle.kts  build.sh  compound-engineering.local.md  crowdin.yml  deps.txt  gradle.properties  jitpack.yml  performance-optimizations.patch  pre-commit  settings.gradle  settings.gradle.kts  string-resource-migration-scope.md  ui-composables-audit.md  wsl_build.sh  zapstore.yaml
amethyst/: CMakeLists.txt  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
amethyst/plans/: 2026-05-14-onchain-zaps.md  2026-05-24-ios-support.md  2026-05-25-appfunctions-signer-prompts.md  2026-05-26-appfunctions-gemini-discovery.md  2026-05-26-appfunctions-screens-as-verbs.md  2026-05-26-avif-implementation-plan.md  2026-05-26-avif-support.md  2026-05-27-avif-instrumented-tests-design.md  2026-05-27-avif-instrumented-tests-plan.md  2026-06-01-dm-live-tail-and-history-slices.md  2026-06-16-health-connect-workout-detection.md  2026-06-18-dal-filter-to-localcache-observer.md  2026-06-19-napplet-sandbox-host.md  2026-06-20-napplet-ecosystem-audit.md  2026-06-20-napplet-inter-applet.md  2026-06-21-napplet-code-audit.md  2026-06-21-napplet-sdk-conformance-audit.md  2026-06-22-napplet-nsite-security.md  2026-06-23-napplet-nap-theme-notify-inc.md  2026-06-24-napplet-embedded-tabs.md  2026-06-25-embed-text-selection-native-parity.md  2026-06-25-web-app-naming.md  2026-06-26-nsite-napplet-favorite-icons.md  2026-07-01-auth-permission-architecture.md  2026-07-07-nip29-armada-study.md  2026-07-10-concord-mobile-integration.md  2026-07-12-dual-reply-minichat.md  2026-07-12-relay-ping-interval-study.md  2026-07-12-resource-usage-ledger.md  2026-07-13-chat-scroll-performance.md  2026-07-13-cord06-refounding.md  2026-07-15-bitchat-geohash-interop.md  2026-07-16-location-chats-first-class.md  2026-07-16-nip46-signer-device-checklist.md  2026-07-18-nip29-group-chat-subscriptions.md  2026-07-18-nip29-group-chat-test-plan.md  2026-07-20-v1.13.0-release-qa.md  2026-07-23-push-notification-redesign.md  README.md
amethyst/plans/archive/: 2026-05-14-onchain-zaps.md  2026-05-25-appfunctions-signer-prompts.md  2026-05-26-appfunctions-gemini-discovery.md  2026-05-26-appfunctions-screens-as-verbs.md  2026-05-26-avif-implementation-plan.md  2026-05-26-avif-support.md  2026-05-27-avif-instrumented-tests-design.md  2026-05-27-avif-instrumented-tests-plan.md  2026-06-01-dm-live-tail-and-history-slices.md  2026-06-19-napplet-sandbox-host.md  2026-06-20-napplet-ecosystem-audit.md  2026-06-21-napplet-code-audit.md  2026-06-21-napplet-sdk-conformance-audit.md  2026-06-22-napplet-nsite-security.md  2026-06-23-napplet-nap-theme-notify-inc.md  2026-06-24-napplet-embedded-tabs.md  2026-06-25-embed-text-selection-native-parity.md  2026-06-25-web-app-naming.md  2026-06-26-nsite-napplet-favorite-icons.md
amethyst/src/androidMain/res/drawable/: alby.xml  ic_call_end.xml  ic_launcher_foreground.xml  incognito_off.xml  mastodon.xml
amethyst/src/androidMain/res/values-ar-rSA/: strings.xml
amethyst/src/androidMain/res/values-bn-rBD/: strings.xml
amethyst/src/androidMain/res/values-cs/: strings.xml
amethyst/src/androidMain/res/values-cs-rCZ/: strings.xml
amethyst/src/androidMain/res/values-de/: strings.xml
amethyst/src/androidMain/res/values-en-rGB/: strings.xml
amethyst/src/androidMain/res/values-eo-rUY/: strings.xml
amethyst/src/androidMain/res/values-fa/: strings.xml
amethyst/src/androidMain/res/values-fr/: strings.xml
amethyst/src/androidMain/res/values-hu-rHU/: strings.xml
amethyst/src/androidMain/res/values-in/: strings.xml
amethyst/src/androidMain/res/values-it-rIT/: strings.xml
amethyst/src/androidMain/res/values-lt-rLT/: strings.xml
amethyst/src/androidMain/res/values-lv-rLV/: strings.xml
amethyst/src/androidMain/res/values-nl-rNL/: strings.xml
amethyst/src/androidMain/res/values-pl-rPL/: strings.xml
amethyst/src/androidMain/res/values-pt-rBR/: strings.xml
amethyst/src/androidMain/res/values-ru-rRU/: strings.xml
amethyst/src/androidMain/res/values-sv-rSE/: strings.xml
amethyst/src/androidMain/res/values-sw-rKE/: strings.xml
amethyst/src/androidMain/res/values-tr-rTR/: strings.xml
amethyst/src/fdroid/: AndroidManifest.xml
amethyst/src/main/: AndroidManifest.xml
amethyst/src/main/cpp/: monerujo.cpp  monerujo.h
amethyst/src/main/res/: CLAUDE.md
amethyst/src/play/: AndroidManifest.xml
cli/hang-interop/hang-listen/: Cargo.toml
cli/hang-interop/hang-listen/src/: main.rs
cli/hang-interop/hang-publish/: Cargo.toml
cli/hang-interop/hang-publish/src/: main.rs
cli/hang-interop/udp-loss-shim/: Cargo.toml
cli/hang-interop/udp-loss-shim/src/: main.rs
libschnorr256k1/: .gitignore  CMakeLists.txt  README.md
libschnorr256k1/bench/: CMakeLists.txt  benchmark.c
libschnorr256k1/include/: schnorr256k1.h
libschnorr256k1/scripts/: build_android.sh
libschnorr256k1/src/: field.h  field_asm.h  point.h  scalar.h  schnorr.c  secp256k1_internal.h  sha256.h  sha256_hw.h
libschnorr256k1/test/: CMakeLists.txt  test_key_codec.c  test_main.c  test_schnorr.c  test_secp256k1.c  test_sha256.c
libsecp256k1-nostr/test/: CMakeLists.txt  test_field.c  test_framework.h  test_main.c  test_point.c  test_schnorr.c  test_secp256k1.c  test_sha256.c
nestsClient/tests/hang-interop/: Cargo.toml  REV
nestsClient/tests/hang-interop/hang-listen/: Cargo.toml
nestsClient/tests/hang-interop/hang-publish/: Cargo.toml
nestsClient/tests/hang-interop/linux-bench/: Dockerfile  run.sh
quartz/tools/mdk-vector-gen/: Cargo.toml  README.md
quartz/tools/mdk-vector-gen/src/: emit_joiner_kp.rs  main.rs  verify_amethyst.rs
tools/arti-build/: .gitignore  ARTI_VERSION  Cargo.toml  README.md  build-arti-host.sh  build-arti.sh  repro-env.sh  rust-toolchain.toml  verify-reproducible.sh
tools/arti-build/src/: lib.rs
(+13885 files in other folders)
