[package]
name = "arti-android"
version = "1.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
arti-client = { version = "0.38", default-features = false, features = [
    "tokio",
    "rustls",
    "compression",
    "onion-service-client",
    "static-sqlite",
] }
tor-rtcompat = { version = "0.38", default-features = false, features = ["tokio", "rustls"] }
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
