[package]
name = "hang-publish"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# Reference moq-lite / hang publisher: opens a broadcast, declares one
# Opus / Container::Legacy audio rendition, encodes a sine wave, and
# pumps frames in 5-frame groups for `--duration` seconds. Used by
# the cross-stack interop tests for the Rust → Amethyst direction.

[[bin]]
name = "hang-publish"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
hang = "0.15"
moq-lite = "0.15"
moq-native = { version = "0.13", default-features = false, features = ["quinn", "aws-lc-rs"] }
opus = "0.3"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
